--- a/src/Kunstmaan/MediaBundle/Resources/views/Folder/show.html.twig
+++ b/src/Kunstmaan/MediaBundle/Resources/views/Folder/show.html.twig
@@ -98,14 +98,14 @@
                     <span class="small-screen">{{ 'media.folder.addsub.action_short' |trans }} <i class="fa fa-folder-o btn__icon-folder"></i></span>
                 </button>
 
-                <button class="btn btn-default btn--raise-on-hover" data-target="#empty-modal" data-toggle="modal" type="button">
-                    <span class="large-screen">Empty</span>
-                    <span class="small-screen">{{ 'media.folder.delete.action_short' |trans }} <i class="fa fa-folder-o btn__icon-folder"></i></span>
-                </button>
-
                 <button class="btn btn-default btn--raise-on-hover" data-target="#delete-modal" data-toggle="modal" type="button">
                     <span class="large-screen">{{ 'media.folder.delete.action' |trans }}</span>
                     <span class="small-screen">{{ 'media.folder.delete.action_short' |trans }} <i class="fa fa-folder-o btn__icon-folder"></i></span>
+                </button>
+
+                <button class="btn btn-default btn--raise-on-hover" data-target="#empty-modal" data-toggle="modal" type="button">
+                    <span class="large-screen">Empty Folder</span>
+                    <span class="small-screen">Empty <i class="fa fa-folder-o btn__icon-folder"></i></span>
                 </button>
             {% endblock %}
         </div>
